updated CV with ISPOR talk

--- a/files/cv.tex
+++ b/files/cv.tex
@@ -124,7 +124,7 @@
 
 %\section{Awards}
 
-\subsection{Selected Awards \& Honors \small(full list: \href{https://janickweberpals.github.io/awards}{\textit{janickweberpals.github.io/awards}})}
+\subsection{Selected Awards \& Honors \small(full list: \href{https://janickweberpals.github.io/awards}{\textit{janickweberpals.github.io/awards \ExternalLink}})}
 
 \begin{twentyshort} % Environment for a short list with no descriptions
 	\twentyitemshort{2018}{Stephan-Weiland Award (German Society for Epidemiology)}
@@ -140,9 +140,9 @@
 %	 TALKS
 %----------------------------------------------------------------------------------------
 
-%\subsection{Selected Talks \& Outreach \small(full list: \href{https://janickweberpals.github.io/talks}{\textit{janickweberpals.github.io/talks}})}
+\subsection{Selected Talks \& Outreach \small(full list: \href{https://janickweberpals.github.io/talks}{\textit{janickweberpals.github.io/talks \ExternalLink}})}
 
-%Causal Inference with US EHR Data: Practical Solutions to Recurrent Methodologic Challenges. Invited panelist together with Sebastian Schneeweiss, Jeremy Rassen, Rebecca Hubbard and Richard Wyss. International Society for Health Economics and Outcomes Research (ISPOR) Annual Meeting, Boston, MA, 2023
+Issues and Solutions When Estimating Treatment Effects Using US Electronic Health Record Data (invited panelist). International Society for Health Economics and Outcomes Research (ISPOR) Annual Meeting, Boston, MA (2023).
 
 %----------------------------------------------------------------------------------------
 %	 PUBLICATIONS
@@ -157,7 +157,7 @@
 
 Loureiro H, Becker T, Bauer-Mehren A, Ahmidi N, \underline{Weberpals J}. Artificial Intelligence for Prognostic Scores in Oncology: a benchmarking study. \textbf{Frontiers in Artificial Intelligence} (2021). %, 4, 9.
 
-\underline{Weberpals J}, Jansen L, Muller OJ, Brenner H. Long-term heart-specific mortality among 347 476 breast cancer patients treated with radiotherapy or chemotherapy: a registry-based cohort study. \textbf{Eur Heart J} (2018).
+%\underline{Weberpals J}, Jansen L, Muller OJ, Brenner H. Long-term heart-specific mortality among 347 476 breast cancer patients treated with radiotherapy or chemotherapy: a registry-based cohort study. \textbf{Eur Heart J} (2018).
 
 %\begin{twentyshort} % Environment for a short list with no descriptions
 	%\twentyitemshort{<dates>}{<title/description>}
