updated talks with picture

--- a/files/cv.tex
+++ b/files/cv.tex
@@ -150,7 +150,7 @@ Issues and Solutions When Estimating Treatment Effects Using US Electronic Healt
 
 %\section{Publications}
 
-\subsection{Selected publications \small(full list: \href{https://janickweberpals.github.io/publications}{\textit{janickweberpals.github.io/publications}})}
+\subsection{Selected publications \small(full list: \href{https://janickweberpals.github.io/publications}{\textit{janickweberpals.github.io/publications \ExternalLink}})}
 
 
 \underline{Weberpals J}, Becker T, Schmich F, Ruettinger D, Theis FJ, Bauer-Mehren A. Deep learning-based propensity scores for confounding control in comparative effectiveness research: a large-scale real-world data study. \textbf{Epidemiology} (2021).%, 32(3):378-388.
