--- a/files/cv.tex
+++ b/files/cv.tex
@@ -102,7 +102,7 @@
 \subsection{Professional Experience}
 
 \begin{twenty} % Environment for a list with descriptions
-	\twentyitem{2022-}{Instructor in Medicine}{Harvard Medical School, Boston, MA, USA}{\href{https://connects.catalyst.harvard.edu/Profiles/display/Person/210515}{\textit{Faculty at Harvard Medical School \& Brigham and Women's Hospital}} leading innovative projects together with FDA and oher major institutions utilizing advanced analytics to leverage routinely collected healthcare data (EHR, imaging, claims) to generate high-quality real-world evidence studies of medical interventions. Co-PI of a Sentinel Innovation Center project developing principled methods and \href{https://janickweberpals.gitlab-pages.partners.org/smdi}{\textit{smdi \ExternalLink R package}} to handle missing covariates in causal inference.
+	\twentyitem{2022-}{Instructor in Medicine}{Harvard Medical School, Boston, MA, USA}{\href{https://connects.catalyst.harvard.edu/Profiles/display/Person/210515}{\textit{Faculty at Harvard Medical School \& Brigham and Women's Hospital}} leading innovative projects together with FDA and other major institutions utilizing advanced analytics to leverage routinely collected healthcare data (EHR, imaging, claims) to generate high-quality real-world evidence studies of medical interventions. Co-PI of a Sentinel Innovation Center project developing principled methods and \href{https://janickweberpals.gitlab-pages.partners.org/smdi}{\textit{smdi \ExternalLink R package}} to handle missing covariates in causal inference.
 }
 	
 	\twentyitem{2020-2022}{Data Scientist}{Hoffmann-La Roche/Genentech, Basel, Switzerland}{Awarded "Exceptional Performance" in 2021. Led and collaborated in cross-functional teams to implement and validate NLP models and real-world database studies which supported and expedited clinical teams with regulatory drug applications in oncology and neuroscience. Contributed to 
