--- a/files/cv.tex
+++ b/files/cv.tex
@@ -142,7 +142,7 @@
 
 \subsection{Selected Talks \& Outreach \small(full list: \href{https://janickweberpals.github.io/talks}{\textit{janickweberpals.github.io/talks \ExternalLink}})}
 
-Issues and Solutions When Estimating Treatment Effects Using US Electronic Health Record Data (invited panelist). International Society for Health Economics and Outcomes Research (ISPOR) Annual Meeting, Boston, MA (2023). \href{https://www.ispor.org/conferences-education/conferences/upcoming-conferences/ispor-2023/program/program/paper/intl2023-3720/15893/316-closing-plenary-issues-and-solutions-when-estimating-treatment-effects-using-us-electronic-health-record-data}{\ExternalLink}
+Issues and Solutions When Estimating Treatment Effects Using US Electronic Health Record Data \href{https://www.ispor.org/conferences-education/conferences/upcoming-conferences/ispor-2023/program/program/paper/intl2023-3720/15893/316-closing-plenary-issues-and-solutions-when-estimating-treatment-effects-using-us-electronic-health-record-data}{(invited panelist \ExternalLink)}. International Society for Health Economics and Outcomes Research (ISPOR) Annual Meeting, Boston, MA (2023).
 
 %----------------------------------------------------------------------------------------
 %	 PUBLICATIONS
