second page sidebar test

--- a/files/cv.tex
+++ b/files/cv.tex
@@ -88,7 +88,7 @@
 	\twentyitem{2018-2020}{Postdoctoral Fellowship{\normalfont }}{Data Science, Roche Innovation Center, Germany}{\emph{Deep learning on electronic health record (EHR) data}}
 	\twentyitem{2015-2018}{Ph.D. Epidemiology {\normalfont}}{Medical Faculty, Heidelberg University, Germany}{Graduated with \emph{Summa cum laude} honors}
 	\twentyitem{2015-2018}{Board certification}{Bavarian Chamber of Pharmacists, Munich, Germany}{\emph{Specialized Pharmacist in Drug Information}}
-	\twentyitem{2010-2015}{Registered Pharmacist}{College of Pharmacy, Marburg University, Germany}{\emph{Pharmaceutical Sciences (PharmD)}}
+	\twentyitem{2010-2015}{Registered Pharmacist}{College of Pharmacy, Marburg University, Germany}{\emph{Pharmaceutical Sciences}}
 	%\twentyitem{2009}{High school}{Kaethe-Kollwitz High School, Bruchsal}{Specializing in Biotechnology and Bioinformatics}
 	%\twentyitem{<dates>}{<title>}{<location>}{<description>}
 \end{twenty}
@@ -178,15 +178,15 @@ Loureiro H, Becker T, Bauer-Mehren A, Ahmidi N, \underline{Weberpals J}. Artific
 %	 SECOND PAGE EXAMPLE
 %----------------------------------------------------------------------------------------
 
-%\newpage % Start a new page
+\newpage % Start a new page
 
 %\makeprofile % Print the sidebar
+\makenewprofile % Print the sidebar
+\section{Other information}
 
-%\section{Other information}
+\subsection{Review}
 
-%\subsection{Review}
-
-%Alice approaches Wonderland as an anthropologist, but maintains a strong sense of noblesse oblige that comes with her class status. She has confidence in her social position, education, and the Victorian virtue of good manners. Alice has a feeling of entitlement, particularly when comparing herself to Mabel, whom she declares has a ``poky little house," and no toys. Additionally, she flaunts her limited information base with anyone who will listen and becomes increasingly obsessed with the importance of good manners as she deals with the rude creatures of Wonderland. Alice maintains a superior attitude and behaves with solicitous indulgence toward those she believes are less privileged.
+Alice approaches Wonderland as an anthropologist, but maintains a strong sense of noblesse oblige that comes with her class status. She has confidence in her social position, education, and the Victorian virtue of good manners. Alice has a feeling of entitlement, particularly when comparing herself to Mabel, whom she declares has a ``poky little house," and no toys. Additionally, she flaunts her limited information base with anyone who will listen and becomes increasingly obsessed with the importance of good manners as she deals with the rude creatures of Wonderland. Alice maintains a superior attitude and behaves with solicitous indulgence toward those she believes are less privileged.
 
 %\section{Other information}
 
